apps/vlc/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: nas-media
          persistentVolumeClaim:
            claimName: nas-media
        - name: config
          emptyDir: {}
      containers:
        - name: app
          image: ghcr.io/jlesage/vlc
          envFrom: []
          volumeMounts:
            - name: nas-media
              mountPath: /media
            - name: config
              mountPath: /config
          resources:
            requests:
              memory: 128M
            limits:
              memory: 1G
          ports:
            - name: http
              containerPort: 5800
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels: &labels
    app.kubernetes.io/component: app
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
spec:
  parentRefs:
    - name: internal-beaver-cloud
      namespace: envoy-gateway-system
  hostnames:
    - vlc.beaver-cloud.xyz
  rules:
    - backendRefs:
        - name: app-service
          port: 80
